Correction alignement

--- a/style.css
+++ b/style.css
@@ -365,8 +365,8 @@ nav
 .bold2_heb 
 {   
     height: 7%;
-    margin-left: 30px;
-    margin-bottom: 10px;
+    margin-left: 2.5%;
+    margin-bottom: 30px;
     margin-top: 15px;
     
 }
@@ -376,6 +376,7 @@ nav
     font-weight: bolder;
     color: black;
     font-size: 1em;
+    margin-left: 20px;
 }
 
 .bold2_heb a:hover
@@ -391,7 +392,7 @@ nav
     min-width: 350px;
     background-color: #F2F2F2;
     border-radius: 15px;   
-    margin-right: 5%;
+    margin-right: 2%;
     margin-bottom: 1%;
 }
 
@@ -401,8 +402,8 @@ nav
     flex-direction:row;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
-    margin-left: 3%;
+    width: 87%;
+    margin-left: 5%;
 }
 aside h2
 {
@@ -478,13 +479,14 @@ aside h2
 {
     width: 98%;
     margin-top: 2%;
-    margin-left: 2%;
+    margin-left: 1%;   
 }
 
 #activ h2
 {
     font-size: 17px;
     font-weight: bolder;
+    padding: 0;
 }
 
 #actmain
@@ -857,7 +859,7 @@ footer
    #heb_main
     {
        width: 70%;
-       margin: 10px auto;
+       margin-top: 10px auto;
     }
    #sec_pop
    {
@@ -865,6 +867,11 @@ footer
         width: 70%;
    }
    /*activites*/
+   #activ
+   {
+       width: 100%;
+       margin-left: 0%;
+   }
    #activites
    {
        text-align: center;
@@ -877,36 +884,48 @@ footer
    .act1
    {
        width: 70%;
-       height: 350px
+       height: 350px;
+       margin-left: auto;
+       margin-right: auto;
+       margin-bottom: 20px;
    }
   .act2
   {
     width: 70%;
-    height: 750px;
+    height: 720px;
+    margin-left:auto;
+    margin-right: auto;
    
   }
  .meta_act2
  {
      margin-bottom: 20px;
+
+     
  }
   #im_p_act1,  #im_p_act2,
   #im_m_act1,  #im_m_act2
   {
       height: 350px;
-      margin-bottom: 20px;
+      box-shadow:  5px 3px #f2f2f2;
+     
   }
-   .a_g_act,
-   #a_p_act1,  #a_m_act2
+   .a_g_act, #a_p_act1,  #a_m_act2
+  
     {   position: absolute;
         width: 100%;
         height: 50px;
         bottom: 0%;
-    } 
+        
+    }   
     #a_m_act1, #a_p_act2
     {
         top: 300px;
         height: 50px;
+       
     } 
+    
+    
 
     /*Footer*/
   
@@ -1162,10 +1181,9 @@ footer
     {   width: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: left;
+        justify-content: center;
         height: auto;
-        margin-bottom: 0px;
-        margin: 7% 0%;  
+        margin:0%;  
     }
     
     #sec_pop
@@ -1203,7 +1221,7 @@ footer
     #heb_main
     {
         width: 96%;
-        margin-left: 2%;
+        margin-left: 0%;
         order: 2;
         background-color: white;
     }
@@ -1236,6 +1254,13 @@ footer
     /*Activités à Marseille*/
     #activ
     {
+        width: 100%;
+        margin-left: 0%;
+        margin-right: 0%;
+       
+    }
+    #activ
+    {
         width: 90%;
         margin-left:auto;
         margin-right: auto;
@@ -1265,6 +1290,8 @@ footer
         width: 100%;
         min-width: 200px;
         margin-bottom: 20px;
+        margin-left: 0%;
+       
     } 
     .act2
     {
@@ -1272,6 +1299,7 @@ footer
         width: 100%;
         min-width: 200px;
         margin-bottom: 20px;
+        margin-left: 0%;
     }
     .meta_act2
     {   display: flex;
